# torium

./: .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
tori/: auth.py  auth_setup.py  cli.py  client.py  favorites.py  listings.py  mcp_auth.py  mcp_server.py  mcp_storage.py  messaging.py  search.py
torium/: __init__.py  auth.py  auth_setup.py  cli.py  client.py  listings.py  mcp_auth.py  mcp_server.py  mcp_storage.py  messaging.py  signing.py
web/: .gitignore  astro.config.mjs  nginx.conf  package-lock.json  package.json
web/src/components/: CliSection.tsx  DeleteForm.tsx  Features.tsx  Footer.astro  Hero.tsx  McpQuickStart.tsx  Navbar.tsx  VideoPlayer.tsx
web/src/layouts/: Layout.astro
web/src/pages/: delete.astro  index.astro  privacy.astro
web/src/styles/: global.css
