[project]
name = "tori-client"
version = "0.1.0"
description = "Tori.fi API client — library, CLI, and MCP server"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "mcp",
    "typer",
    "rich",
]

[project.scripts]
tori = "tori.cli:app"
tori-mcp = "tori.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
