[project]
name = "torium"
version = "0.1.0"
description = "Tori.fi API client — library, CLI, and MCP server"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "mcp",
    "typer",
    "rich",
]

[project.scripts]
torium = "torium.cli:app"
torium-mcp = "torium.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
